add new project for tangerine, refactor gallery to be fully responsive, add xtra large screen size rules, add new copy in about me

--- a/index.html
+++ b/index.html
@@ -99,44 +99,46 @@
       <h3>WORK</h3>
       <div class="work-gallery">
 
-        <a href="portfolio.html">
-          <div class="work-thumbnail" id="portfolio">
-            <div class="work-thumb-overlay">
-            </div>
-            <div class="work-thumb-info">
-              <h5>Portfolio Website</h5>
-              <p>UX/UI Design & Development</p>
-            </div>
+        <a href="portfolio.html" class="work-thumbnail" id="portfolio">
+          <div class="work-thumb-overlay">
+          </div>
+          <div class="work-thumb-info">
+            <h5>Portfolio Website</h5>
+            <p>UX/UI Design & Development</p>
           </div>
         </a>
-        <a href="npo.html">
-          <div class="work-thumbnail" id="npo">
-            <div class="work-thumb-overlay">
-            </div>
-            <div class="work-thumb-info">
-              <h5>Non Profit Donator</h5>
-              <p>Invision Prototype</p>
-            </div>
+
+        <a href="tangerine.html" class="work-thumbnail" id="tangerine">
+          <div class="work-thumb-overlay">
+          </div>
+          <div class="work-thumb-info">
+            <h5>Tangerine</h5>
+            <p>UI Design</p>
           </div>
         </a>
-        <a href="style-360.html">
-          <div class="work-thumbnail" id="style360">
-            <div class="work-thumb-overlay">
-            </div>
-            <div class="work-thumb-info">
-              <h5>Style 360</h5>
-              <p>React JS Development</p>
-            </div>
+
+        <a href="npo.html" class="work-thumbnail" id="npo">
+          <div class="work-thumb-overlay">
+          </div>
+          <div class="work-thumb-info">
+            <h5>Non Profit Donator</h5>
+            <p>Invision Prototype</p>
           </div>
         </a>
-        <a href="proper-knocks.html">
-          <div class="work-thumbnail" id="proper-knocks">
-            <div class="work-thumb-overlay">
-            </div>
-            <div class="work-thumb-info">
-              <h5>Proper Knocks</h5>
-              <p>Digital & Print Design</p>
-            </div>
+        <a href="style-360.html" class="work-thumbnail" id="style360">
+          <div class="work-thumb-overlay">
+          </div>
+          <div class="work-thumb-info">
+            <h5>Style 360</h5>
+            <p>React JS Development</p>
+          </div>
+        </a>
+        <a href="proper-knocks.html" class="work-thumbnail" id="proper-knocks">
+          <div class="work-thumb-overlay">
+          </div>
+          <div class="work-thumb-info">
+            <h5>Proper Knocks</h5>
+            <p>Digital & Print Design</p>
           </div>
         </a>
       </div>
@@ -148,8 +150,10 @@
       <div class="about-content restrain-width">
         <img src="images/about-photo.png" alt="portrait of brendan hanna">
         <div class="about-text">
-          <p>I'm passionate about combining design and tech with music and social change.  Before embarking on my journey as a digital product designer, I was a music business intern for <a href="http://aristake.com/" target="blank">Ari's Take</a>, a hip hop recording class teacher with <a href="http://www.morpheusyouth.org/" target="blank">Morpheus Youth Project</a>, and a barista.</p>
-          <p>I am also a hip hop artist under the name Gepetto.  As a rapper and producer, I've been active in Portland for ten years and put out three studio projects and a bunch of mixtapes and production features. Check my music out <a href="http://gepettomusic.com" target="_blank">here.</a></p>
+          <p>Since elementary school, I've always loved to draw.  As a teenager, I caught the skateboarding bug, which became my gateway drug into graffiti and late 90s underground rap music.</p>
+          <p>I spent ten years as a barista in Portland's specialty coffee industry while making music on the side, but I grew stagnant and knew I needed more creativity in my life.</p>
+          <p>After a series of adventures including a music business internship in LA and a five month stint in code school, I came full circle to my love of visual art, this time incorporating what I learned about development.</p>
+          <p>Now I design websites and apps, and when I'm not doing that, I'm generally still doodling, skateboarding, and making rap music! (check that out <a href="http://gepettomusic.com" target="blank">here</a>).</p>
         </div>
       </div>
     </section>
