--- a/tangerine.html
+++ b/tangerine.html
@@ -58,33 +58,32 @@
       <div class="case-study" id="case-study-1">
         <div class="case-study-left">
           <div class="case-study-heading" >
-            <a href="npo.html">
+            <a href="portfolio.html">
               <i class="fa fa-chevron-left fa-2x back-chevron"></i>
             </a>
-            <h3>Style 360</h3>
-            <a href="proper-knocks.html">
+            <h3>Tangerine</h3>
+            <a href="npo.html">
               <i class="fa fa-chevron-right fa-2x back-chevron"></i>
             </a>
           </div>
           <div class="case-study-text">
             <div class="case-study-bullets">
               <div class="case-study-bullets-left">
-                <p><strong>Company:</strong> SightWorks</p>
-                <p><strong>Role:</strong> Front-End Web Development</p>
+                <ul>
+                  <li><strong>Role:</strong>UI/UX Design</li>
+                </ul>
               </div>
               <div class="case-study-bullets-right">
-                <p><strong>Tech:</strong> React JS, SASS, LESS</p>
-                <p><strong>Live Link:</strong>
-                  <a href="https://style.dev.digitalxe.com/site/styleme.style.dev.digitalxe.com/app" target="blank" id="style-link">
-                    (Use style360 for username and password)
-                  </a>
-                </p>
+                <ul>
+                  <li><strong>Tech:</strong> Sketch</li>
+                </ul>
               </div>
             </div>
-            <!--/bullets-->
             <div class="case-study-paragraph">
-              <p>SightWorks needed a prototype of their new product, Style 360, built in React JS, a technology they hadn't used yet.  As their intern, I took PSD mockups and turned them into a pixel-perfect UI, which was then handed off to the senior dev to integrate it into their AWS-powered engine.</p>
-              <p>I took initiative on learning React JS and helping my team implement it, played a deciding role in discussions on tooling, and communicated effectively with my co-intern, project manager, the senior developer and the technical and creative directors.</p>
+              <p>This one-day UI design sprint involved designing a responsive landing page (including menu in open and closed states) for a fictional brand.</p>
+              <p>I chose to do a modern online clothing boutique in the vein of Everlane, so I knew I'd be working with a lot of white space and making room for the product shots do the talking.</p>
+              <p>I experimented with different ways of placing elements in a minimal design to create interesting configurations of white space and create eyeflow.  I used strong visual hierarchy, the model's implied motion, and eye contact to influence eyeflow and user behavior.</p>
+              <p>The result is a design that's deceptively simple, letting the user be wowed by the product, feel the spacious calming vibe of the brand, be directed to the CTA, and be able to find all the information they're looking for easily.</p>
             </div>
           </div>
         </div>
@@ -99,10 +98,10 @@
             <!--content mobile -->
             <div class="case-study-content display-on-mobile">
               <div class="screenshots">
-                <img src="images/style-360/style360-mobile-1.PNG" alt="screenshot of style360 project" class="screenshot">
-                <img src="images/style-360/style360-mobile-2.PNG" alt="screenshot of style360 project" class="screenshot">
-                <img src="images/style-360/style360-mobile-4.PNG" alt="screenshot of style360 project" class="screenshot">
-                <img src="images/style-360/style360-mobile-5.PNG" alt="screenshot of style360 project" class="screenshot">
+                <img src="images/tangerine/tablet.png" alt="tangerine tablet layout" class="screenshot">
+                <img src="images/tangerine/moodboard-styleguide-mobile.png" alt="tangerine mood board and style guide" class="screenshot">
+                <img src="images/tangerine/desktop-menu-open.png" alt="tangerine desktop layout with menu open" class="screenshot">
+                <img src="images/tangerine/tablet-menu-open.png" alt="tangerine tablet layout with menu open" class="screenshot">
               </div>
               <div class="to-top-desktop">
                 <i class="fa fa-chevron-up fa-2x" aria-hidden="true"></i>
@@ -111,11 +110,10 @@
             </div>
             <!--content tablet and up -->
             <div class="case-study-content display-on-tablet" >
-              <img src="images/style-360/style360-1.PNG" alt="screenshot of style360 project" class="screenshot">
-              <img src="images/style-360/style360-2.PNG" alt="screenshot of style360 project" class="screenshot">
-              <img src="images/style-360/style360-3.PNG" alt="screenshot of style360 project" class="screenshot">
-              <img src="images/style-360/style360-4.PNG" alt="screenshot of style360 project" class="screenshot">
-              <img src="images/style-360/style360-5.PNG" alt="screenshot of style360 project" class="screenshot">
+              <img src="images/tangerine/tablet.png" alt="tangerine tablet layout" class="screenshot">
+              <img src="images/tangerine/moodboard-styleguide-mobile.png" alt="tangerine mood board and style guide" class="screenshot">
+              <img src="images/tangerine/desktop-menu-open.png" alt="tangerine desktop layout with menu open" class="screenshot">
+              <img src="images/tangerine/tablet-menu-open.png" alt="tangerine tablet layout with menu open" class="screenshot">
               <div class="to-top-desktop">
                 <i class="fa fa-chevron-up fa-2x" aria-hidden="true"></i>
                 <p>top</p>
