--- a/npo.html
+++ b/npo.html
@@ -58,7 +58,7 @@
       <div class="case-study" id="case-study-1">
         <div class="case-study-left">
           <div class="case-study-heading">
-            <a href="portfolio.html">
+            <a href="tangerine.html">
               <i class="fa fa-chevron-left fa-2x back-chevron"></i>
             </a>
             <h3>Non Profit Donator</h3>
