change digital product designer to ux ui designer

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       <div class="header-overlay"></div>
       <div class="header-text">
         <h1>Brendan Hanna</h1>
-        <p>Digital Product Designer<p>
+        <p>UX/UI Designer<p>
       </div>
     </header>
 
