add daily ui case study remove portfolio case study

--- a/daily-ui.html
+++ b/daily-ui.html
@@ -1,25 +1,25 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <meta charset="utf-8">
-  <!--responsive meta tag-->
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Brendan Hanna</title>
-  <!--materialize css cdn-->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
-  <!-- animate on scroll -->
-  <link href="https://cdn.rawgit.com/michalsnik/aos/2.1.1/dist/aos.css" rel="stylesheet">
-  <!--my compiled scss-->
-  <link rel="stylesheet" href="styles/styles.css">
-  <!-- google fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700,700i|Roboto:400,700" rel="stylesheet">
-  <!-- font awesome icons -->
-  <script src="https://use.fontawesome.com/8606092cd1.js"></script>
-  <!--jquery scripts-->
-  <script type="text/javascript" src="js/jquery-3.2.1.js"></script>
-  <!--my scripts-->
-  <script type="text/javascript" src="js/scripts.js"></script>
-</head>
+  <head>
+    <meta charset="utf-8">
+    <!--responsive meta tag-->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Brendan Hanna</title>
+    <!--materialize css cdn-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
+    <!-- animate on scroll -->
+    <link href="https://cdn.rawgit.com/michalsnik/aos/2.1.1/dist/aos.css" rel="stylesheet">
+    <!--my compiled scss-->
+    <link rel="stylesheet" href="styles/styles.css">
+    <!-- google fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700,700i|Roboto:400,700" rel="stylesheet">
+    <!-- font awesome icons -->
+    <script src="https://use.fontawesome.com/8606092cd1.js"></script>
+    <!--jquery scripts-->
+    <script type="text/javascript" src="js/jquery-3.2.1.js"></script>
+    <!--my scripts-->
+    <script type="text/javascript" src="js/scripts.js"></script>
+  </head>
   <body>
     <!--fade-in page, inline script needed to avoid flickering.  adds opacity: 0 class to body, which is removed by first line of JS in scripts.js-->
     <script>document.body.className += ' fade-out';</script>
@@ -57,32 +57,24 @@
       <div class="case-study" id="case-study-1">
         <div class="case-study-left">
           <div class="case-study-heading" ="fade-left">
-            <a href="pokemon.html">
+            <a href="proper-knocks.html">
               <i class="fa fa-chevron-left fa-2x back-chevron"></i>
             </a>
-            <h3>Early Bird Tees</h3>
-            <a href="style-360.html">
+            <h3>User Interface Design</h3>
+            <a href="showfinder.html">
               <i class="fa fa-chevron-right fa-2x back-chevron"></i>
             </a>
           </div>
           <div class="case-study-text">
             <div class="case-study-bullets">
               <div class="case-study-bullets-left">
-                <p><strong>Company:</strong> Proper Knocks Record Label</p>
-                <p><strong>Project:</strong> T-Shirt design for hip-hop group The Early Bird Project</p>
-              </div>
-              <div class="case-study-bullets-right">
-                <p><strong>Role:</strong> Graphic Design</p>
-                <p><strong>Tech:</strong>Adobe Illustrator</p>
+                <p><strong>Role: </strong> User Interface Design</p>
+                <p><strong>Tech: </strong> Adobe Illustrator & XD</p>
               </div>
             </div>
             <!--/bullets-->
             <div class="case-study-paragraph">
-              <p>The Early Bird Project my hip-hop group.
-                <a href="https://properknocks.bandcamp.com/album/the-early-bird-project" target="blank">We released our EP on our friend's record label,
-                </a>
-                and I designed the T shirts.  Our friend printed them in the label's studio space.
-            </p>
+              <p>Bite-sized nuggets of UI goodness inspired by <a href="http://dailyui.co" target="_blank">dailyui.co</a></p>
             </div>
           </div>
         </div>
@@ -90,14 +82,18 @@
           <!--content wrapper-->
           <div class="case-study-content-wrapper">
             <!--little scrolly mouse icon-->
-            <!-- <div class="scroll-downs">
+            <div class="scroll-downs">
               <div class="mousey">
                 <div class="scroller"></div>
               </div>
-            </div> -->
+            </div>
             <!--'content' (screenshots) -->
             <div class="case-study-content">
-              <img src="images/ebird.jpg" alt="early bird tee shirt design" class="screenshot">
+              <img src="images/daily-ui/give.png" alt="mobile app home screen button design for fictional donation app" class="screenshot">
+
+              <img src="images/daily-ui/brand.png" alt="mobile app landing screen design for fictional clothing retail platform" class="screenshot">
+
+              <img src="images/daily-ui/calculators.jpg" alt="calculator designs" class="screenshot">
               <!--back-to-top arrow-->
               <!-- <div class="to-top-desktop">
                 <i class="fa fa-chevron-up fa-2x" aria-hidden="true"></i>
