--- a/index.html
+++ b/index.html
@@ -70,8 +70,7 @@
           <ul>
             <li>UI Design</li>
             <li>Graphic Design</li>
-            <li>Sketch, Photoshop and Illustrator</li>
-            <li></li>
+            <li>Sketch, Adobe XD, Photoshop and Illustrator</li>
           </ul>
         </div>
         <div class="skill-wrapper">
@@ -85,6 +84,7 @@
         <div class="skill-wrapper">
           <h4>UX</h4>
           <ul>
+            <li>User Research</li>
             <li>Design Strategy</li>
             <li>Wireframing</li>
             <li>Prototyping</li>
@@ -98,13 +98,12 @@
     <section id="work" data-aos="fade-up">
       <h3>WORK</h3>
       <div class="work-gallery">
-
-        <a href="portfolio.html" class="work-thumbnail" id="portfolio">
+        <a href="showfinder.html" class="work-thumbnail" id="showfinder">
           <div class="work-thumb-overlay">
           </div>
           <div class="work-thumb-info">
-            <h5>Portfolio Website</h5>
-            <p>UX/UI Design & Development</p>
+            <h5>Show Finder</h5>
+            <p>Mobile UX/UI Design</p>
           </div>
         </a>
 
@@ -113,7 +112,7 @@
           </div>
           <div class="work-thumb-info">
             <h5>Tangerine</h5>
-            <p>UI Design</p>
+            <p>User Interface Design</p>
           </div>
         </a>
 
@@ -139,6 +138,14 @@
           <div class="work-thumb-info">
             <h5>Proper Knocks</h5>
             <p>Digital & Print Design</p>
+          </div>
+        </a>
+        <a href="daily-ui.html" class="work-thumbnail" id="daily-ui">
+          <div class="work-thumb-overlay">
+          </div>
+          <div class="work-thumb-info">
+            <h5>UI Sprints</h5>
+            <p>User Interface Design</p>
           </div>
         </a>
       </div>
@@ -169,7 +176,7 @@
         </div>
         <div class="input-field">
           <textarea id="message" class="materialize-textarea" name="message"></textarea>
-          <label for="message">Leave a Mess</label>
+          <label for="message">Leave a Mess!</label>
         </div>
         <button type="submit" class="waves-effect waves-light btn-large button">HOLLER</button>
       </form>
