--- a/portfolio.html
+++ b/portfolio.html
@@ -58,7 +58,7 @@
       <div class="case-study" id="case-study-1">
         <div class="case-study-left">
           <div class="case-study-heading">
-            <a href="proper-knocks.html">
+            <a href="showfinder.html">
               <i class="fa fa-chevron-left fa-2x back-chevron"></i>
             </a>
             <h3>Portfolio Website</h3>
