--- a/showfinder.html
+++ b/showfinder.html
@@ -58,11 +58,11 @@
       <div class="case-study" id="case-study-1">
         <div class="case-study-left">
           <div class="case-study-heading" >
-            <a href="showfinder.html">
+            <a href="daily-ui.html">
               <i class="fa fa-chevron-left fa-2x back-chevron"></i>
             </a>
-            <h3>Tangerine</h3>
-            <a href="npo.html">
+            <h3>Show Finder</h3>
+            <a href="tangerine.html">
               <i class="fa fa-chevron-right fa-2x back-chevron"></i>
             </a>
           </div>
@@ -70,20 +70,18 @@
             <div class="case-study-bullets">
               <div class="case-study-bullets-left">
                 <ul>
-                  <li><strong>Role:</strong>UI/UX Design</li>
+                  <li><strong>Role: </strong>UX/UI Design</li>
                 </ul>
               </div>
               <div class="case-study-bullets-right">
                 <ul>
-                  <li><strong>Tech:</strong> Sketch</li>
+                  <li><strong>Tech: </strong> Adobe XD Prototype</li>
                 </ul>
               </div>
             </div>
             <div class="case-study-paragraph">
-              <p>This one-day UI design sprint involved designing a responsive landing page (including menu in open and closed states) for a fictional brand.</p>
-              <p>I chose to do a modern online clothing boutique in the vein of Everlane, so I knew I'd be working with a lot of white space and making room for the product shots do the talking.</p>
-              <p>I experimented with different ways of placing elements in a minimal design to create interesting configurations of white space and create eyeflow.  I used strong visual hierarchy, the model's implied motion, and eye contact to influence eyeflow and user behavior.</p>
-              <p>The result is a design that's deceptively simple, letting the user be wowed by the product, feel the spacious calming vibe of the brand, be directed to the CTA, and be able to find all the information they're looking for easily.</p>
+              <p>ShowFinder is a better way to find concerts and build community.  It pulls in shows from public music listings and your facebook events, and lets you upload your own shows, in-app.  There are deep filter options like sub-genre, neighborhood and price range, and you can keep tabs on your favorite bands by following them and getting notifications!</p>
+              <p>By creating this high-fidelity interactive prototype in Adobe XD, I'm able to continue iterating on the concept until it's totally dialed in before development.  (By the way, if you're an ios or android developer and you want to see this app become a reality, please reach out through the contact form!)</p>
             </div>
           </div>
         </div>
@@ -98,10 +96,11 @@
             <!--content mobile -->
             <div class="case-study-content display-on-mobile">
               <div class="screenshots">
-                <img src="images/tangerine/tablet.png" alt="tangerine tablet layout" class="screenshot">
-                <img src="images/tangerine/moodboard-styleguide-mobile.png" alt="tangerine mood board and style guide" class="screenshot">
-                <img src="images/tangerine/desktop-menu-open.png" alt="tangerine desktop layout with menu open" class="screenshot">
-                <img src="images/tangerine/tablet-menu-open.png" alt="tangerine tablet layout with menu open" class="screenshot">
+                <img src="images/showfinder/landing-mockup.png" alt="showfinder app landing screen" class="screenshot">
+
+                <img src="images/showfinder/feed-mockup.png" alt="showfinder app feed screen" class="screenshot">
+
+                <img src="images/showfinder/detail-mockup.png" alt="showfinder app show detail screen" class="screenshot">
               </div>
               <div class="to-top-desktop">
                 <i class="fa fa-chevron-up fa-2x" aria-hidden="true"></i>
@@ -110,10 +109,12 @@
             </div>
             <!--content tablet and up -->
             <div class="case-study-content display-on-tablet" >
-              <img src="images/tangerine/tablet.png" alt="tangerine tablet layout" class="screenshot">
-              <img src="images/tangerine/moodboard-styleguide-mobile.png" alt="tangerine mood board and style guide" class="screenshot">
-              <img src="images/tangerine/desktop-menu-open.png" alt="tangerine desktop layout with menu open" class="screenshot">
-              <img src="images/tangerine/tablet-menu-open.png" alt="tangerine tablet layout with menu open" class="screenshot">
+              <img src="images/showfinder/landing-mockup.png" alt="showfinder app landing screen" class="screenshot">
+
+              <img src="images/showfinder/feed-mockup.png" alt="showfinder app feed screen" class="screenshot">
+
+              <img src="images/showfinder/detail-mockup.png" alt="showfinder app show detail screen" class="screenshot">
+
               <div class="to-top-desktop">
                 <i class="fa fa-chevron-up fa-2x" aria-hidden="true"></i>
                 <p>top</p>
