--- a/proper-knocks.html
+++ b/proper-knocks.html
@@ -62,7 +62,7 @@
               <i class="fa fa-chevron-left fa-2x back-chevron"></i>
             </a>
             <h3>Proper Knocks</h3>
-            <a href="portfolio.html">
+            <a href="daily-ui.html">
               <i class="fa fa-chevron-right fa-2x back-chevron"></i>
             </a>
           </div>
